<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obj"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtobj"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="0.21"
            android:ems="10"
            android:hint="@string/projName"
            android:inputType="textMultiLine"
            android:textColor="#55596b"
	        android:textColorHint="#9D9DA0"
	        android:background="#E5E5E5"
	        android:padding="10dp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dept2"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtdept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/background"
            android:inputType="textMultiLine"
            android:textColor="#55596b"
	        android:textColorHint="#9D9DA0"
	        android:background="#E5E5E5"
	        android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.91" >

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>