<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp" 
    android:background="#eaeaea">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/edtActionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColor="#55596b"
        android:textColorHint="#9D9DA0"
        android:background="#E5E5E5"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:textColor="#000"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:layout_marginLeft="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:textColor="#000"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Button
        android:id="@+id/btnAddProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/add" 
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="#fff"
        android:background="#1fae66" />

</LinearLayout>
