<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/updateProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/update"
        android:textColor="#fff"
        android:background="#1fae66" />

    <TextView
        android:id="@+id/tvLnameStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvFnameStatic"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/lname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvFnameStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvLnameStatic"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:text="@string/fname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvDeptStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvLnameStatic"
        android:layout_below="@+id/tvLnameStatic"
        android:layout_marginTop="31dp"
        android:text="@string/dept"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEmailStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDeptStatic"
        android:layout_below="@+id/tvDeptStatic"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPassStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEmailStatic"
        android:layout_below="@+id/tvEmailStatic"
        android:layout_marginTop="38dp"
        android:text="@string/pass2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvFnameDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvLnameStatic"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvDeptStatic"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvLnameDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvLnameStatic"
        android:layout_alignLeft="@+id/tvFnameDisp"
        android:layout_alignParentRight="true"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvDeptDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvDeptStatic"
        android:layout_alignLeft="@+id/tvLnameDisp"
        android:layout_alignParentRight="true"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEmailDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvEmailStatic"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvDeptStatic"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPassDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvPassStatic"
        android:layout_alignBottom="@+id/tvPassStatic"
        android:layout_alignLeft="@+id/tvEmailDisp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>