<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp" 
    android:background="#eaeaea">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edtKrName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:hint="@string/krr"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="#55596b"
		        android:textColorHint="#9D9DA0"
		        android:background="#E5E5E5" />

            <EditText
                android:id="@+id/edtKrImpact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/impact"
                android:inputType="number|numberDecimal"
                android:padding="10dp"
                android:textColor="#55596b"
		        android:textColorHint="#9D9DA0"
		        android:background="#E5E5E5" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingTop="10dp"
                android:text="@string/due"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <CalendarView
                android:id="@+id/clndrDueDate"
                android:layout_width="match_parent"
                android:layout_height="388dp"
                android:layout_margin="10dp" />

            <Button
                android:id="@+id/btnAddKrmain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:paddingTop="5dp"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:background="#1fae66"
                 />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
