<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="#EAEAEA"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="14dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#00aa55"
                android:textSize="25sp"
                android:textStyle="normal"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/login_msg" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:background="@drawable/circle" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_okr" />
            </FrameLayout>

            <EditText
                android:id="@+id/edtuserid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#E5E5E5"
                android:hint="@string/empID"
                android:padding="10dp"
                android:textColor="#55596b"
                android:textColorHint="#9D9DA0"
                android:textSize="15sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/edtpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#E5E5E5"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#55596b"
                android:textColorHint="#9D9DA0"
                android:textSize="15sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#1FAE66"
                android:padding="10dp"
                android:text="@string/login_btn"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="normal" />

            <ProgressBar
                android:id="@+id/pbbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>