<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sdf"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/running_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/timer"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/running_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_activity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_activity"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" >

            <Button
                android:id="@+id/running_pause"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracker_pause" 
                android:textColor="#fff"
                android:background="#1fae66"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/running_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pas"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/running_stop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/running_lbl"
                android:text="@string/tracker_stop"
                android:textColor="#fff"
                android:background="#1fae66"
                android:layout_margin="10dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>