<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eaeaea" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:text="@string/desc"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />

            <EditText
                android:id="@+id/edtCriteriaDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:padding="10dp"
                android:textColor="#55596b"
		        android:textColorHint="#9D9DA0"
		        android:background="#E5E5E5" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/current"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />

            <EditText
                android:id="@+id/edtCriteriaCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#55596b"
		        android:textColorHint="#9D9DA0"
		        android:background="#E5E5E5" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/targ"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />

            <EditText
                android:id="@+id/edtCriteriaTarget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#55596b"
		        android:textColorHint="#9D9DA0"
		        android:background="#E5E5E5" />

            <Button
                android:id="@+id/btnAddCriteriaNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/add"
                android:background="#1fae66"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
